# winreg-forensic

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  mkdocs.yml  release-plz.toml  renovate.json
.github/workflows/: ci.yml  docs.yml  fuzz.yml  release-plz.yml  release.yml
crates/winreg-artifacts/: Cargo.toml
crates/winreg-artifacts/src/: amcache.rs  catalog_scan.rs  com_hijacking.rs  lib.rs  lsadump.rs  lxss.rs  path_expansion.rs  registry_keys.rs  run_keys.rs  sam.rs  shellbags.rs  shimcache.rs  svc_diff.rs  typed_urls.rs  userassist.rs
crates/winreg-artifacts/tests/: amcache_tests.rs  catalog_scan_tests.rs  com_hijacking_tests.rs  discover_user_hives_tests.rs  lsadump_tests.rs  lxss_tests.rs  path_expansion_tests.rs  registry_keys_tests.rs  run_keys_tests.rs  sam_tests.rs  shellbags_tests.rs  shimcache_tests.rs  svc_diff_tests.rs  typed_urls_tests.rs  userassist_tests.rs
crates/winreg-artifacts/tests/common/: hive_builder.rs  mod.rs
crates/winreg-artifacts/tests/data/: README.md
crates/winreg-carve/: Cargo.toml
crates/winreg-carve/src/: carver.rs  lib.rs
crates/winreg-carve/tests/: hive_carver.rs  recover_deleted_tests.rs
crates/winreg-carve/tests/common/: hive_builder.rs  mod.rs
crates/winreg-cli/: Cargo.toml
crates/winreg-cli/src/: main.rs  output.rs
crates/winreg-cli/tests/: version.rs
crates/winreg-core/: Cargo.toml
crates/winreg-core/src/: bytes.rs  cell_reader.rs  detect.rs  error.rs  hive.rs  iter.rs  key.rs  lib.rs  path.rs  security.rs  txlog.rs  value.rs
crates/winreg-core/tests/: hive_builder_tests.rs  iterator_tests.rs  key_navigation_tests.rs  value_decoding_tests.rs
crates/winreg-diff/: CHANGELOG.md  Cargo.toml
crates/winreg-diff/src/: engine.rs  lib.rs  snapshot.rs  types.rs
crates/winreg-diff/tests/: engine_tests.rs  snapshot_tests.rs
crates/winreg-diff/tests/common/: hive_builder.rs
crates/winreg-discover/: Cargo.toml
crates/winreg-discover/src/: lib.rs  scanner.rs  types.rs
crates/winreg-discover/tests/: scanner_tests.rs
crates/winreg-discover/tests/common/: mod.rs
crates/winreg-format/: CHANGELOG.md  Cargo.toml
crates/winreg-format/src/: bytes.rs  cells.rs  flags.rs  hbin.rs  header.rs  lib.rs  version.rs
crates/winreg-fuse/: Cargo.toml
crates/winreg-fuse/src/: lib.rs
crates/winreg-py/: Cargo.toml
crates/winreg-py/src/: lib.rs
crates/winreg-recover/: Cargo.toml
crates/winreg-recover/src/: lib.rs
crates/winreg-testutil/: Cargo.toml
crates/winreg-testutil/src/: lib.rs
crates/winreg-timeline/: CHANGELOG.md  Cargo.toml
crates/winreg-timeline/src/: lib.rs
docs/: index.md  privacy.md  terms.md
docs/decisions/: 0001-forensic-carve-carver-contract.md  0002-winreg-crate-suite-and-naming.md  0003-declarative-binrw-regf-parsing.md  0004-forbid-unsafe-io-generic-reader.md
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: hive_carve.rs  recover_deleted.rs
rt-reg/: Cargo.toml
rt-reg/src/: main.rs
supply-chain/: config.toml
wix/: main.wxs
