[workspace]
resolver = "2"
members = [
    "crates/winreg-format",
    "crates/winreg-core",
    "crates/winreg-diff",
    "crates/winreg-discover",
    "crates/winreg-recover",
    "crates/winreg-carve",
    "crates/winreg-artifacts",
    "crates/winreg-timeline",
    "crates/winreg-fuse",
    "crates/winreg-py",
    "rt-reg",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/4n6h4x0r/winreg-forensic"

[workspace.dependencies]
# Format/parsing
binrw = "0.4"
bitflags = "2"

# I/O
memmap2 = "0.9"

# Error handling
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

# Time
chrono = { version = "0.4", default-features = false, features = ["alloc", "serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Testing
tempfile = "3"

# Knowledge leaf — registry-artifact catalog (which keys, what they mean).
forensicnomicon = "0.4"

# Internal
winreg-format = { path = "crates/winreg-format" }
winreg-core = { path = "crates/winreg-core" }
winreg-diff = { path = "crates/winreg-diff" }
winreg-discover = { path = "crates/winreg-discover" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
# Panic-free: hives are untrusted, attacker-controllable input (Paranoid Gatekeeper).
unwrap_used = { level = "deny", priority = 0 }
expect_used = { level = "deny", priority = 0 }
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
