[package]
name = "rt-reg"
version = "0.1.0"
description = "Windows Registry forensic CLI"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "rt-reg"
path = "src/main.rs"

[dependencies]
winreg-core.workspace = true
winreg-diff.workspace = true
winreg-format.workspace = true
clap.workspace = true
serde_json.workspace = true

[lints]
workspace = true
