[package]
name = "winreg-artifacts"
version = "0.1.0"
description = "Forensic artifact decoders for Windows Registry"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
winreg-core.workspace = true
winreg-format.workspace = true
serde.workspace = true
chrono.workspace = true

[dev-dependencies]
winreg-format.workspace = true

[lints]
workspace = true
