[package]
name = "winreg-carve"
version = "0.1.0"
description = "Registry hive carving from disk/memory images"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
winreg-core.workspace = true
winreg-format.workspace = true

[dev-dependencies]
winreg-testutil = { workspace = true }
winreg-core.workspace = true

[lints]
workspace = true
