[package]
name = "winreg-cli"
version = "0.1.0"
description = "Windows Registry forensic CLI (reg4n6)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "reg4n6"
path = "src/main.rs"

[dependencies]
winreg-core.workspace = true
winreg-diff.workspace = true
winreg-discover.workspace = true
winreg-format.workspace = true
chrono.workspace = true
clap.workspace = true
serde_json.workspace = true

[lints]
workspace = true
