[package]
name = "winreg-cli"
version = "0.2.0"
description = "Windows Registry forensic CLI (reg4n6)"
authors = ["Albert Hui <albert@securityronin.com>"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "reg4n6"
path = "src/main.rs"

[dependencies]
winreg-core.workspace = true
winreg-diff.workspace = true
winreg-discover.workspace = true
winreg-format.workspace = true
jiff.workspace = true
clap.workspace = true
serde_json.workspace = true

[lints]
workspace = true
