[package]
name = "winreg-core"
version = "0.2.1"
description = "Core Windows Registry hive parser"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["forensics", "windows", "registry", "hive", "dfir"]
categories = ["parser-implementations", "data-structures"]

[dependencies]
winreg-format.workspace = true
binrw.workspace = true
memmap2.workspace = true
miette.workspace = true
thiserror.workspace = true
jiff.workspace = true
serde = { workspace = true }

[dev-dependencies]
winreg-testutil = { workspace = true }
tempfile.workspace = true

[lints]
workspace = true
