[package]
name = "winreg-discover"
version = "0.2.0"
description = "Registry hive source discovery — find hives in evidence"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
winreg-core.workspace = true
winreg-format.workspace = true
jiff = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
winreg-testutil = { workspace = true }
tempfile.workspace = true
serde_json.workspace = true

[lints]
workspace = true
