[package]
name = "winreg-testutil"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Internal test support: in-memory REGF hive builder (not published)"

[dependencies]
winreg-format.workspace = true

[lints]
workspace = true
